--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,8 @@
 @import "variables";
 @import "header";
 @import "main";
+@import "section";
+@import "footer";
 *{
     margin: 0;
     padding: 0;
